--- a/digix_11dec.ipynb
+++ b/digix_11dec.ipynb
@@ -787,10 +787,10 @@
    "source": [
     "import tweepy\n",
     "\n",
-    "consumer_key = \"p8v1EErDWrV3S2OzakD5UpdI7\"\n",
-    "consumer_secret = \"U6UrcmxLGC4x0XHHf6OTTAEopmoaCOlwYmyycmT15W2ima2GFr\"\n",
-    "access_token = \"104267341-WlGFLjOYKFPG7n6FjvbFv5rQQtMEXaKhKaWR6UzR\"\n",
-    "access_token_secret = \"yTTI20dB9vkl8fKe52CghQoiiZbY6xXbGJRsvmD5oTksf\"\n",
+    "consumer_key = \"XXX\"\n",
+    "consumer_secret = \"XXX\"\n",
+    "access_token = \"XXX\"\n",
+    "access_token_secret = \"XXX\"\n",
     "\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
     "auth.set_access_token(access_token, access_token_secret)\n",
