--- a/westerdals-18-march.ipynb
+++ b/westerdals-18-march.ipynb
@@ -1283,7 +1283,8 @@
     "### Explanatory Data Visualizations\n",
     "\n",
     "* Often more creative and elaborate\n",
-    "* This is the kind of visualization you should be finding in presentations and sales reports.\n",
+    "* This is the kind of visualization you should be finding in presentations, sales reports and news articles.\n",
+    "* Closer to what a dashboard solution would typically offer\n",
     "\n",
     "##### Examples\n",
     "\n",
@@ -1299,21 +1300,20 @@
     "\n",
     "### Background\n",
     "\n",
-    "* Machine learning is a sub-field of Artificial Intelligence (AI)\n",
-    "* Machine learning is the science of getting computers to act without being explicitly programmed.\n",
-    "* Machine learning is literally everyhwere, and is often at work even when we don't realist it.\n",
-    "    * Google Translate\n",
-    "    * Siri\n",
-    "    * Facebook News\n",
-    "    * ...\n",
-    "    * ...\n",
-    "\n",
+    "* Field of study that gives computer the ability to learn without being explicitly programmed.\n",
+    "* First defined in 1959 (why has it become some popular lately?)\n",
+    "* Gartner Identifies the Top 10 Strategic Technology Trends for 2016 (machine learning is mentioned in three of them)\n",
     "* Machine learning is impacting so many critical industries, including healthcare, education, finance, robotics, artificial intelligence, astronomy, and more. \n",
     "* The ability to develop machines and systems that automatically improve, puts machine learning at the absolute forefront of virtually any field that relies on data.\n",
     "\n",
+    "> A computer program is said to learn from experience E with respect to some task T and some performance measure P, if its performance on T, as measured by P, improves with experience E. -- Tom Mitchell\n",
+    "\n",
     "#### Alpha GO\n",
     "\n",
-    "AlphaGo made history once again on Saturday 12. March 2016, as the first computer program to defeat a top professional Go player in an even match. There is significant strategy involved in the game, and the number of possible games is vast ($10^{761}$ compared, for example, to the estimated $10^{120}&)\n",
+    "* First computer program to defeat a top professional Go player in an even match.\n",
+    "* There is significant strategy involved in the game\n",
+    "* The number of possible games is vast ($10^{761}$ compared, for example, to the estimated $10^{120}$)\n",
+    "* AlphaGo's algorithm uses a combination of machine learning and tree search techniques, combined with extensive training, both from human and computer play.\n",
     "\n",
     "<img style=\"float:left\" src=\"https://gogameguru.com/i/2016/03/AlphaGo-Lee-Sedol-game-3-game-over.jpg\"/>\n",
     "\n",
@@ -1321,35 +1321,31 @@
     "\n",
     "> \"We're very pleased that AlphaGo played some quite surprising and beautiful moves, according to the commentators, which was amazing to see.\"\n",
     "\n",
-    "### Formal Definition\n",
+    "### What a deep network thinks about your #selfie\n",
     "\n",
-    "> A computer program is said to learn from experience E with respect to some task T and some performance measure P, if its performance on T, as measured by P, improves with experience E. -- Tom Mitchell\n",
-    "\n",
-    "### Machine Learning in Practice\n",
-    "\n",
-    "* Håkon T\n",
+    "http://karpathy.github.io/2015/10/25/selfie/\n",
     "\n",
     "### Basic Machine Learning Concepts\n",
     "\n",
+    "* I'll try to do some live code samples where i implement som different models while i try to explain what is happening.\n",
+    "* I'm using the **scikit-learn** package in Python to implement the models\n",
+    "* **Numpy** and **Pandas** (for handling data) and **matplotlib** for visualizations.\n",
+    "\n",
     "#### Supervised Learning: Regression and Classification\n",
     "\n",
-    "In Supervised Learning, we have a dataset consisting of both features and labels. The task is to construct an estimator which is able to predict the label of an object given the set of features.\n",
+    "In Supervised Learning, we have a dataset consisting of both features and labels. The task is to construct an estimator which is able to predict the label of an object given the set of features. A simple task would be to make a model that can recognize handwritten digits.\n",
     "\n",
-    "> Would like to do prediction: estimate a function f(x) so that y = f(x)\n",
+    "**More complicated use cases**\n",
     "\n",
-    "Where **y** can be:\n",
-    "- Real number (regression)\n",
-    "- Categorical (classification)\n",
-    "- Complex object (Ranking of objects, Parse tree, etc.)\n",
-    "\n",
-    "Supervised learning can be broken down into two categories, <b>classification</b> and <b>regression</b>. In classification, the label is discrete, while in regression, the label is continuous. For example classifying if an email is spam or not is a classification problem: the label is from two categories (spam and not spam). We might wish to estimate housing prices: this would be a regression problem, because the label **price** is a continuous quantity.\n",
-    "\n",
-    "**Example use-cases**\n",
-    "\n",
-    "- Given a apartment in Oslo, predict how much it will be sold for\n",
-    "- Given a photograph of a person, identify the person in the photo.\n",
-    "- Given a list of movies a person has watched and their personal rating of the movie, recommend a list of movies they would like (recommender-systems)\n",
-    " \n",
+    "- Predicting future results (Regression, Business Forecasting)\n",
+    "- Given a photograph of a person, identify the person in the photo (Classification, Facebook)\n",
+    "- Based on your previously listened songs, create a personal playlist for you (Recommender Systems, Spotify)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Regression\n",
     "\n",
     "One of the simplest examples of regression is fitting a straight line to the data."
