--- a/westerdals-18-march.ipynb
+++ b/westerdals-18-march.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -22,155 +22,6 @@
     "\n",
     "from IPython.html.widgets import interact\n",
     "from mpl_toolkits import mplot3d"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Make an exmaple class that contains all the code, then call e.g. example.line_plot() to generate the examples used"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Big Data & Business Intelligence\n",
-    "\n",
-    "## Who are we?\n",
-    "\n",
-    "- Thomas Almenningen\n",
-    "- Håkon Trømborg\n",
-    "\n",
-    "<img style=\"width:400px; float:left\" src=\"http://journajobs.eu/wp-content/uploads/2015/09/Accenture-red-arrow-logo.png\"/>\n",
-    "\n",
-    "<br clear=\"all\"/>\n",
-    "\n",
-    "## Agenda\n",
-    "\n",
-    "Big data has become a term that can mean almost anything, but if we focus on what is disruptive about the emergence of the trend toward large-scale data retention and processing, a definition becomes clearer. Big data is a market that arose from movements toward large-scale data collection, aggregation, and processing.\n",
-    "\n",
-    "A 2011 McKinsey Global Institute report characterizes the main components and ecosystem of big data as follows:\n",
-    "\n",
-    "\t* Big Data technologies, like business intelligence, cloud computing and databases\n",
-    "\t* Visualization, such as charts, graphs and other displays of the data\n",
-    "    * Techniques for analyzing data, such as A/B testing, machine learning and natural language processing\n",
-    "    \n",
-    "Before we start I want to test your knowledge on big data taking this quiz:\n",
-    "\n",
-    "* https://pixelastic.github.io/pokemonorbigdata/\n",
-    "\n",
-    "## Big Data Technologies\n",
-    "\n",
-    "### History up to the current state of affairs\n",
-    "\n",
-    "**As the volume of data has grown over the past 25 years, data comprehension for decision-making has consisted of the same two steps: creating the data warehouse and understanding the contents within the data warehouse.**\n",
-    "\n",
-    "\n",
-    "\n",
-    "Over the years, we have reduced data warehousing costs through the growing use of open source software, cloud computing, and commodity hardware, while improving our ability to manage more data of greater variety that is created at a higher velocity. We’ve moved from data warehouses costing tens of millions of dollars and being afforded only by the largest corporations, such as financial services institutions like Citibank and retailers like Walmart, to warehouses becoming more affordable to small and mid-sized corporations. More recently, low-cost offerings such as Amazon Redshift, Google BigQuery, and even Microsoft Azure, have moved data warehousing to the cloud. Finally, data warehousing is accessible to the corporate masses.\n",
-    "\n",
-    "**As more data has been generated, we have become better managing it cost effectively, but still struggle to efficiently analyze it.**\n",
-    "\n",
-    "Driven by the broadening global use of the Internet, the connectivity the Internet affords, new areas like the Internet of Things that yield data in volumes we’ve never seen before, and the applications that are being created to capitalize on this use and connectivity, we find ourselves awash with data. Fast data and slow data, simple data and complex data, and all of it in unprecedented volumes. How much bigger has the data become? We have grown from generating approximately 5 zettabytes of unstructured data in 2014 to a projected approximation of 40 zettabytes of unstructured data in 2020\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Formal Definition(s)\n",
-    "\n",
-    "#### What is big data?\n",
-    "\n",
-    "<table style=\"float:left\">\n",
-    "<td>Name<td>Symbol<td>Value\n",
-    "<tr><td>Kilobyte<td>KB<td>$10^3$\n",
-    "<tr><td>Yottabytes<td>YB<td>$10^24$\n",
-    "</table>\n",
-    "\n",
-    "<br clear=\"all\"/>\n",
-    "\n",
-    "> Data that is so large it becomes difficult to process using traditional systems\n",
-    "\n",
-    "### Basics Concepts\n",
-    "\n",
-    "#### Big Data Sources\n",
-    "\n",
-    "- Transactions (Business Systems)\n",
-    "- Social Media\n",
-    "- Unstructured Data (Text, images, video)\n",
-    "- Sensor Data\n",
-    "- Digitizing ourselves\n",
-    "    - Fitbit / Sport Trackers (Tracking your daily activity, sleep, food-uptake, etc.)\n",
-    "    \n",
-    "- **Question** What kind of data do you produce every day?\n",
-    "\n",
-    "> Everything that get tracked get measured.\n",
-    "\n",
-    "##### Unstructured vs. Structured Data\n",
-    "\n",
-    "90:10\n",
-    "\n",
-    "#### Big Data Characteristics\n",
-    "\n",
-    "- Volume\n",
-    "- Variaty\n",
-    "- Veracity\n",
-    "- Velocity\n",
-    "\n",
-    "### Data Warehouses & Data Lakes\n",
-    "\n",
-    "The data warehouse and all its incarnations—enterprise data warehouse, data mart, and so on—is essentially an infrastructure of curated data. This data may come from a single data source (e.g., the database of a CRM application) or by integrating a variety of data sources (e.g., integrating the database of a CRM application with a database containing the social media interactions of each customer in the CRM database). This data may be structured (e.g., currency data describing the amount paid by each customer), unstructured (e.g., notes about each interaction between a customer and a service employee in free text form), or semi-structured (e.g., log data generated by a network router). Curated data is data that, once captured, is cleaned, tagged, and profiled both automatically and, more often than people would like to think, manually.\n",
-    "\n",
-    "#### Challanges of Relational Databases\n",
-    "\n",
-    "- As the volume increases, the cost goes up, exponentially.\n",
-    "\n",
-    "#### Data Pipes\n",
-    "\n",
-    "- E.g. Kafka\n",
-    "\n",
-    "#### Storage Technologies\n",
-    "\n",
-    "- NoSQL Stores\n",
-    "- Key-Value Stores\n",
-    "- Columnar Stores\n",
-    "- Document Stores\n",
-    "- Graph Stors\n",
-    "\n",
-    "#### Data Warehouses\n",
-    "\n",
-    "#### Data Lakes\n",
-    "\n",
-    "### The Cloud\n",
-    "\n",
-    "### Cluster Computing\n",
-    "\n",
-    "#### Batch\n",
-    "\n",
-    "- Conventional Processing\n",
-    "- Batch Uses\n",
-    "\n",
-    "#### Streaming\n",
-    "\n",
-    "- Real-time Processing\n",
-    "- Streaming Uses\n",
-    "- Systems\n",
-    "    - Apache Storm\n",
-    "    - Apache Spark - Streaming\n",
-    "    - Apache Flink\n",
-    "    - Apache S4\n",
-    "    - Esper\n",
-    "\n",
-    "#### MapReduce and/or Apache Spark\n",
-    "\n",
-    "### Summarizing\n",
-    "\n",
-    "<img style=\"float:left\" src=\"http://image.slidesharecdn.com/paconathan-datasciencein2016movingup-bigdataspain2015-151021145959-lva1-app6891/95/data-science-in-2016-moving-up-by-paco-nathan-at-big-data-spain-2015-6-638.jpg?cb=1445513972\"/>"
    ]
   },
   {
@@ -2569,7 +2420,7 @@
     "\n",
     "* When underfitting the data you have typically too little data or not given your model enough freedom.\n",
     "* If you give your model too much freedom it might **learn the data**, including the noise instead off the underlying distribution and overfit the data.\n",
-    "* You should therefore aim for the **sweetspot**, which is between the two."
+    "* You should therefore aim for the **sweetspot** between the two..."
    ]
   },
   {
