--- a/westerdals-18-march.ipynb
+++ b/westerdals-18-march.ipynb
@@ -40,19 +40,19 @@
     "\n",
     "### Motivation\n",
     "\n",
-    "* As big data becomes bigger, and more companies deal with complex datasets with dozens of variables, data visualization will become even more important.\n",
+    "* As big data becomes bigger, and more companies deal with complex data sets with dozens of variables, data visualization will become even more important.\n",
     "* With the rise of data warehouses, delivery of data analysis reports has shifted from print to digital.\n",
-    "* Data Visualization is an important tool when working with data\n",
+    "* Data visualization is an important tool when working with data\n",
     "\n",
     "### Formal Definition\n",
     "\n",
-    "> Visualization is the process that transforms (abstract) data into interactive graphical representations for the purpose of exploration, confirmation, or presentation.\n",
+    "> Visualization is the process that transforms (abstract) data into interactive graphical representations for the purpose of exploration, confirmation or presentation.\n",
     "\n",
-    "#### Why use Graphics to Visualize Data?\n",
+    "#### Why use graphics to visualize data?\n",
     "\n",
     "* Figures are richer; provide more information with less clutter and in less space.\n",
     "* Figures provide the gestalt effect: they give an overview; make structure more visible.\n",
-    "* Figures are more accessible, easier to understand, faster to grasp, more comprehensible, more memorable, more fun, and less formal.\n",
+    "* Figures are more accessible, easier to understand, faster to grasp, more comprehensible, more memorable, more fun and less formal.\n",
     "\n",
     "<a href=\"https://www.youtube.com/watch?v=-hJmjoowwGU\">Meditteranian Sea Currents</a>\n",
     "\n",
@@ -60,7 +60,7 @@
     "\n",
     "* Statistics are often used to make a summary of the data\n",
     "* Anscombe's quartet comprises four datasets that have nearly identical simple statistical properties\n",
-    "* Yet appear very different when graphed. \n",
+    "* Still appear very different when graphed. \n",
     "* Created to demonstrate both the importance of graphing data before analyzing it and the effect of outliers on statistical properties.\n",
     "\n",
     "<img style=\"float:left; width:75%\" src=\"https://camo.githubusercontent.com/859b0bd8625ba6c8f1bb6706bd985189002560b6/687474703a2f2f74682d6d617965722e64652f626f6368756d323031332f696d672f616e73636f6d62655f7461626c652e6a7067\"/>\n",
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the datasets it's easy to spot the differences. Its hard to illustrate these differences using other tools than visualization."
+    "Looking at the datasets it's easy to spot the differences. Its more difficult to illustrate these differences using other tools than visualization."
    ]
   },
   {
@@ -135,17 +135,17 @@
    "source": [
     "#### Visual Encodings\n",
     "\n",
-    "Visual encodings are a mapping from data to display elements. For a visualization to be effective it must be easialy decoded by the reader. Reserchers have looked at which visual encodings works, and which doesn't. \n",
+    "Visual encodings are mappings from data to display elements. For a visualization to be effective it must be easialy decoded by the reader. Reserchers have looked at which visual encodings that work, and which don't. \n",
     "\n",
-    "**Cleveland McGill Scale ranks them in the following order**:\n",
+    "**The Cleveland McGill Scale ranks them in the following order**:\n",
     "\n",
     "* Position\n",
     "* Position on identical but nonaligned scales e.g. multiple scatter plots\n",
     "* Length\n",
-    "* Angle and Slope\n",
+    "* Angle and slope\n",
     "* Area\n",
-    "* Volume, Density and Color Saturation\n",
-    "* Color Hue"
+    "* Volume, density and color saturation\n",
+    "* Color hue"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Angle and Slope"
+    "#### Angle and slope"
    ]
   },
   {
@@ -308,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Color Hue"
+    "#### Color hue"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Contrast and/or Color Saturation"
+    "#### Contrast and/or color saturation"
    ]
   },
   {
@@ -439,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**General rule:** Try to avoid using 3d data visualizations"
+    "**General rule:** Try to avoid using 3D data visualizations"
    ]
   },
   {
@@ -455,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Chart Types\n",
+    "### Chart types\n",
     "\n",
     "When most people think about visualizations they think about graphs or diagrams.\n",
     "\n",
@@ -465,7 +465,7 @@
     "\n",
     "Lets start by looking at some **basic chart types**.\n",
     "\n",
-    "#### Bar Charts\n",
+    "#### Bar charts\n",
     "\n",
     "A bar chart or bar graph is a chart that presents grouped data with rectangular bars with lengths proportional to the values that they represent. The bars can be plotted vertically or horizontally. A vertical bar chart is sometimes called a column bar chart."
    ]
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Line Chart\n",
+    "#### Line chart\n",
     "\n",
     "A line chart or line graph is a type of chart which displays information as a series of data points called 'markers' connected by straight line segments It is a basic type of chart common in many fields. It is similar to a scatter plot except that the measurement points are ordered (typically by their x-axis value) and joined with straight line segments. A line chart is often used to visualize a trend in data over intervals of time – a time series – thus the line is often drawn chronologically.\n",
     "\n",
@@ -547,7 +547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Scatter Plots\n",
+    "#### Scatter plots\n",
     "\n",
     "The data is displayed as a collection of points, each having the value of one variable determining the position on the horizontal axis and the value of the other variable determining the position on the vertical axis. Useful for finding correlation between variables"
    ]
@@ -622,7 +622,7 @@
    "source": [
     "#### Graphs (Social Networks)\n",
     "\n",
-    "In mathematics and computer science, graph theory is the study of graphs, which are mathematical structures used to model pairwise relations between objects. A graph in this context is made up of vertices, nodes, or points which are connected by edges, arcs, or lines. A graph may be undirected, meaning that there is no distinction between the two vertices associated with each edge, or its edges may be directed from one vertex to another.\n",
+    "In mathematics and computer science, graph theory is the study of graphs. These are mathematical structures used to model pairwise relations between objects. A graph in this context is made up of vertices, nodes, or points which are connected by edges, arcs, or lines. A graph may be undirected, meaning that there is no distinction between the two vertices associated with each edge, or its edges may be directed from one vertex to another.\n",
     "\n",
     "<a href=\"http://evelinag.com/blog/2015/12-15-star-wars-social-network\">Star Wars Social Networks</a>"
    ]
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -657,10 +657,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x10ff05978>"
+       "<IPython.lib.display.IFrame at 0x42b2be0>"
       ]
      },
-     "execution_count": 175,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,11 +708,11 @@
    "source": [
     "### Lie Factor\n",
     "\n",
-    "The “Lie Factor” is a value to describe the relation between the size of effect shown in a graphic and the size of effect shown in the data.\n",
+    "The “Lie Factor” is a value to describe the relationship between the size of effect shown in a graphic and the size of effect shown in the data.\n",
     "\n",
     "## $\\text{lie factor} = \\frac{\\text{Size of the effect shown in the graphics}}{\\text{Size of the effect shown in the data}}$\n",
     "\n",
-    "**General Rule**: 0.95 < lie-factor < 1.05"
+    "**General rule**: 0.95 < lie-factor < 1.05"
    ]
   },
   {
@@ -789,16 +789,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exploratory vs. Explanatory Data Visualizations\n",
+    "### Exploratory vs. explanatory data visualizations\n",
     "\n",
     "When working with data visualization you often encounter the terms **exploratory data analysis** and **explanatory data visualization**. The first could be described as a conversation between you and your data, the latter a conversation between your data and your audience.\n",
     "\n",
-    "#### Exploratory Data Analysis\n",
+    "#### Exploratory data analysis\n",
     "\n",
     "* Often more practical and simple (we are interested in solving problems)\n",
     "* Choosing the right tool (chart)\n",
     "\n",
-    "##### Titanic: Practical Example\n",
+    "##### Titanic: practical example\n",
     "\n",
     "> The sinking of the RMS Titanic is one of the most infamous shipwrecks in history. On April 15, 1912, during her maiden voyage, the Titanic sank after colliding with an iceberg, killing 1502 out of 2224 passengers and crew. This sensational tragedy shocked the international community and led to better safety regulations for ships. -- Kaggle"
    ]
@@ -951,7 +951,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Some Quick Cleaning**"
+    "**Some quick cleaning**"
    ]
   },
   {
@@ -1098,7 +1098,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Passenger Class\n",
+    "#### Passenger class\n",
     "\n",
     "> The Preston curve is an empirical cross-sectional relationship between life expectancy and real per capita income."
    ]
@@ -1133,7 +1133,7 @@
    "source": [
     "#### Age\n",
     "\n",
-    "Lets see how the passengers age affected their chance of survival"
+    "Lets see how each passenger's age affected their chance of survival"
    ]
   },
   {
@@ -1163,7 +1163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explanatory Data Visualizations\n",
+    "### Explanatory data visualizations\n",
     "\n",
     "* Often more creative and elaborate\n",
     "* This is the kind of visualization you should be finding in presentations, sales reports and news articles.\n",
@@ -1178,14 +1178,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Techniques for Analyzing Data\n",
+    "## Techniques for analyzing data\n",
     "\n",
-    "### Machine Learning\n",
+    "### Machine learning\n",
     "\n",
     "* Field of study that gives computer the ability to learn without being explicitly programmed.\n",
     "* First defined in 1959 (why has it become some popular lately?)\n",
     "* Gartner Identifies the Top 10 Strategic Technology Trends for 2016 (machine learning is mentioned in three of them)\n",
-    "* Machine learning is impacting so many critical industries, including healthcare, education, finance, robotics, artificial intelligence, astronomy, and more. \n",
+    "* Machine learning is impacting many critical industries, including healthcare, education, finance, robotics, artificial intelligence, astronomy, and more. \n",
     "* The ability to develop machines and systems that automatically improve, puts machine learning at the absolute forefront of virtually any field that relies on data.\n",
     "\n",
     "> A computer program is said to learn from experience E with respect to some task T and some performance measure P, if its performance on T, as measured by P, improves with experience E. -- Tom Mitchell\n",
@@ -1204,17 +1204,13 @@
     "\n",
     "> \"We're very pleased that AlphaGo played some quite surprising and beautiful moves, according to the commentators, which was amazing to see.\"\n",
     "\n",
-    "### What a deep network thinks about your #selfie\n",
-    "\n",
-    "http://karpathy.github.io/2015/10/25/selfie/\n",
-    "\n",
-    "### Basic Machine Learning Concepts\n",
+    "### Basic Machine Learning concepts\n",
     "\n",
     "* I'll try to do some live code samples where i implement som different models while i try to explain what is happening.\n",
     "* I'm using the **scikit-learn** package in Python to implement the models\n",
     "* **Numpy** and **Pandas** (for handling data) and **matplotlib** for visualizations.\n",
     "\n",
-    "#### Supervised Learning: Regression and Classification\n",
+    "#### Supervised Learning: Regression and classification\n",
     "\n",
     "In Supervised Learning, we have a dataset consisting of both features and labels. The task is to construct an estimator which is able to predict the label of an object given the set of features. A simple task would be to make a model that can recognize handwritten digits (I'm showing this later).\n",
     "\n",
@@ -1396,7 +1392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets see what line a support vector machine would chooce"
+    "Lets see what line a support vector machine would choose"
    ]
   },
   {
@@ -1579,7 +1575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Multi-Class Problem\n",
+    "#### Multi-class problem\n",
     "\n",
     "What then if you have multiple classes. If you have multiple classes one approach is to create a one vs. all set of classifiers."
    ]
@@ -1623,7 +1619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unsupervised Learning: Dimensionality Reduction and Clustering\n",
+    "### Unsupervised Learning: Dimensionality reduction and clustering\n",
     "\n",
     "In machine learning, the problem of unsupervised learning is that of trying to find hidden structure in unlabeled data. Since the examples given to the learner are unlabeled, there is no error or reward signal to evaluate a potential solution.\n",
     "\n",
@@ -1640,7 +1636,7 @@
     "* Given a mixture of two sound forces, for example a person talking over another and separate the two (Blind source separation problem)\n",
     "* Given your cellphone customers location, predict the best place to build new cell towers.\n",
     "\n",
-    "#### K-means Clustering\n",
+    "#### K-means clustering\n",
     "\n",
     "k-means clustering aims to partition n observations into k clusters in which each observation belongs to the cluster with the nearest mean.\n",
     "\n",
@@ -1742,7 +1738,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reason: Validation and Model Selection\n",
+    "## Reason: Validation and model selection\n",
     "\n",
     "One of the most important pieces of machine learning is <b>model validation</b>: that is checking how well your model performs or fits a particular dataset. This is often referred to as **offline validation**. **Online validation** refers to online experiments designed to measure the true performance of your model such as e.g. **A/B-testing**.\n",
     "\n",
@@ -1958,7 +1954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizing the Digits"
+    "### Visualizing the digits"
    ]
   },
   {
@@ -1998,9 +1994,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validation Sets\n",
+    "### Validation sets\n",
     "\n",
-    "To assess how well our model performs we cannot test our model on the same data that was used for training. <b>This is generally not a good idea</b>. If we optimize our estimator this way, we will tend to over-fit the data: that is, we learn the noise.\n",
+    "To assess how well our model performs we cannot test our model on the same data that was used for training. <b>This is generally not a good idea</b>. If we optimize our estimator this way, we will tend to over-fit the data: that is, we learn what the noise is like.\n",
     "\n",
     "A better way to test a model is to use a hold-out set which doesnt enter the training.\n",
     "\n",
@@ -2043,7 +2039,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test Set"
+    "#### Test set"
    ]
   },
   {
@@ -2198,7 +2194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### K-Fold Cross-Validation\n",
+    "#### K-fold cross-validation\n",
     "\n",
     "One of the main problems with validation sets is that you \"lose\" some of the data. Above we only used 75% of the data for training and 25% for validation. Another option is to use K-fold cross-validation where you split the data into k subsets and and the holdout method is repeated k times, where each chunk gets a turn as the validation set. Then the average error across all k trials is computed."
    ]
@@ -2248,11 +2244,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Overfitting, Underfitting and Model Selection\n",
+    "### Overfitting, underfitting and model selection\n",
     "\n",
     "One of the most important pieces of machine learning is model validation: that is, checking how well your model fits a given dataset. But there are some pitfalls you need to watch out for.\n",
     "\n",
-    "#### Illusatration of Bias-Variance Tradeoff"
+    "#### Illusatration of bias-variance trade-off"
    ]
   },
   {
@@ -2458,31 +2454,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Closing Remarks\n",
+    "## Closing remarks\n",
     "\n",
-    "* Cool Community\n",
-    "* The market will be needing more data scientists (McKinsey Report)\n",
+    "* Cool community\n",
+    "* The market will be needing more data scientists (McKinsey report)\n",
     "* Questions?"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
