Minor spell checks

--- a/digix-1-april.ipynb
+++ b/digix-1-april.ipynb
@@ -581,10 +581,10 @@
     "\n",
     "* Field of study that gives computer the ability to learn without being explicitly programmed.\n",
     "* Machine learning can be seen as a class of models with tuneable parameter such that the model automatically can adjust its ability to adapt to previously seen data.\n",
-    "* First defined in 1959 (why has it become some popular lately?)\n",
+    "* First defined in 1959 (why has it become so popular lately?)\n",
     "* Gartner's Top 10 Strategic Technology Trends for 2016 (machine learning is mentioned in three of them)\n",
     "* Machine learning is impacting many critical industries, including healthcare, education, finance, robotics, artificial intelligence, astronomy, and more. \n",
-    "* The ability to develop machines and systems that automatically improve, puts machine learning at the absolute forefront of virtually any field that relies on data.\n",
+    "* The ability to develop machines and systems that automatically improve puts machine learning at the absolute forefront of virtually any field that relies on data.\n",
     "\n",
     "> A computer program is said to learn from experience E with respect to some task T and some performance measure P, if its performance on T, as measured by P, improves with experience E. -- Tom Mitchell\n",
     "\n",
@@ -613,7 +613,7 @@
     "\n",
     "- Predicting future results (Regression, Business Forecasting)\n",
     "- Given a photograph of a person, identify the person in the photo (Classification, Facebook)\n",
-    "- Based on your previously listened songs, create a personal playlist for you (Recommender Systems, Spotify)\n",
+    "- Based on songs you have previously listened to, create a personal playlist for you (Recommender Systems, Spotify)\n",
     "\n",
     "##### Regression\n",
     "\n",
@@ -789,7 +789,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets see what line a support vector machine would choose"
+    "Let's see what line a Support Vector Machine would choose"
    ]
   },
   {
@@ -1401,7 +1401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A confusion matrix can give us more information about our models performance. More specifically how well our model is at predicting the differnet label values"
+    "A confusion matrix can give us more information about our models performance. More specifically how well our model is at predicting the different label values"
    ]
   },
   {
@@ -1440,7 +1440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model generally predicts the correct label. However we can see that the model some times misses on:\n",
+    "The model generally predicts the correct label. However we can see that the model sometimes misses on:\n",
     "\n",
     "* 2 and 7\n",
     "* 3 and 8\n",
@@ -1502,21 +1502,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
