--- a/digix-1-april.ipynb
+++ b/digix-1-april.ipynb
@@ -94,7 +94,6 @@
     "### Python\n",
     "\n",
     "* Python is a popular general purpose high-level programming language.\n",
-    "* ...\n",
     "\n",
     "#### TIOBE Index for September 2015\n",
     "\n",
@@ -581,10 +580,10 @@
     "\n",
     "* Field of study that gives computer the ability to learn without being explicitly programmed.\n",
     "* Machine learning can be seen as a class of models with tuneable parameter such that the model automatically can adjust its ability to adapt to previously seen data.\n",
-    "* First defined in 1959 (why has it become some popular lately?)\n",
+    "* First defined in 1959 (why has it become so popular lately?)\n",
     "* Gartner's Top 10 Strategic Technology Trends for 2016 (machine learning is mentioned in three of them)\n",
     "* Machine learning is impacting many critical industries, including healthcare, education, finance, robotics, artificial intelligence, astronomy, and more. \n",
-    "* The ability to develop machines and systems that automatically improve, puts machine learning at the absolute forefront of virtually any field that relies on data.\n",
+    "* The ability to develop machines and systems that automatically improve puts machine learning at the absolute forefront of virtually any field that relies on data.\n",
     "\n",
     "> A computer program is said to learn from experience E with respect to some task T and some performance measure P, if its performance on T, as measured by P, improves with experience E. -- Tom Mitchell\n",
     "\n",
